--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -79,7 +79,7 @@
         <label for="inputPhone" class="col-form-label ml-5 px-2" style="width: 12%">Phone Number</label>
         <div class="col-sm-10">
           <input [(ngModel)]="phone" [ngModelOptions]="{standalone: true}"
-                 type="text" class="form-control" id="inputPhone" placeholder="(555) 123-4323" value="">
+                 type="text" class="form-control" id="inputPhone" placeholder="phone number" value="">
         </div>
       </div>
 
@@ -87,7 +87,7 @@
         <label for="inputEmail" class="col-form-label ml-5 px-2" style="width: 12%">Email</label>
         <div class="col-sm-10">
           <input [(ngModel)]="email" [ngModelOptions]="{standalone: true}"
-                 type="text" class="form-control" id="inputEmail" placeholder="alice@wonderland.com" value="">
+                 type="text" class="form-control" id="inputEmail" placeholder="email" value="">
         </div>
       </div>
 
