--- a/src/app/section-list/section-list.component.html
+++ b/src/app/section-list/section-list.component.html
@@ -1,13 +1,11 @@
-<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
-<nav class="navbar navbar-expand-md  navbar-light" style="background-color: #e3f2fd;">
-  <!--<a class="navbar-brand" href="#">White-Board</a>-->
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
   <a class="navbar-brand" href="#" style="color: #007bff; font-size: x-large">WhiteBoard</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo" aria-controls="navbarTogglerDemo" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav mr-auto">
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
@@ -111,17 +109,19 @@
     </ul>
 
   </div>
-<div [hidden] = admin>
-  <ul class="list-group rounded py-1 my-1" style="width: 36rem">
-    <li *ngFor="let section of sections" class="list-group-item shadow bg-light">
-      <span style="font-size: large; color:dodgerblue;"> </span>{{section.name}}
-      <button (click)="enroll(section)"
-              class="float-right btn btn-primary float-right mt-2">Enroll</button>
-      <br> <span style="color: dimgrey; font-style: italic "> Seats Available :  </span>
-      {{section.seats}}
-    </li>
-  </ul>
-</div>
+  <div [hidden]=admin>
+    <ul class="list-group rounded py-1 my-1" style="width: 36rem">
+      <li *ngFor="let section of sections" class="list-group-item shadow bg-light">
+        <span style="font-size: large; color:dodgerblue;"> </span>{{section.name}}
+        <button
+          (click)="enroll(section)"
+          class="float-right btn btn-primary float-right mt-2">Enroll
+        </button>
+        <br> <span style="color: dimgrey; font-style: italic "> Seats Available :  </span>
+        {{section.seats}}
+      </li>
+    </ul>
+  </div>
 
 
 </div>
