added service for dropping section/unenrollment

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -121,7 +121,8 @@
               </span>
           </div>
             <div class="col-4 pl-4">
-              <button (click)="dropSection(section)"
+              <button (click)="dropSection(enrollment)"
+
                       class="float-right btn btn-outline-danger mr-2">
                 <i class="fas fa-times"></i>&nbsp;&nbsp;Un Enroll</button>
             </div>
