--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,12 +1,11 @@
-<nav class="navbar navbar-expand-lg  navbar-light" style="background-color: #e3f2fd;">
-  <!--<a class="navbar-brand" href="#">White-Board</a>-->
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
   <a class="navbar-brand" href="#" style="color: #007bff; font-size: x-large">WhiteBoard</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo" aria-controls="navbarTogglerDemo" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav">
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
@@ -59,7 +58,14 @@
     <button id="registerBtn"
             type="button"
             (click)="register(username, password, password2)"
-            class="btn text-white" style="margin-left:3%; width: 97%; background-color: darkgreen">Register
+            class="btn text-white mb-2" style="margin-left:3%; width: 97%; background-color: darkgreen">Register
+    </button>
+
+    <button (click)="reset(username, password, password2)"
+            id="resetBtn" class="btn btn-secondary btn-block"
+            style="margin-left:3%; width: 97%;">
+
+      Reset
     </button>
     <div>
     </div>
