--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -157,7 +157,10 @@
               <button (click)="editSection(section)"
                       class="float-right btn btn-outline-success float-right mt-2 mr-2">
                 <i class="fas fa-pencil-alt"></i></button>
-              <br> <span style="color: dimgrey; font-style: italic "> Seats Available :  </span>
+              <br>
+              <span style="color: dimgrey; font-style: italic "> Max Seats :  </span>
+              {{section.maxSeats}}
+              <span style="color: dimgrey; font-style: italic ">&nbsp;&nbsp;|&nbsp;&nbsp; Seats Available :  </span>
               {{section.seats}}
             </li>
           </ul>
