--- a/src/app/course-viewer/course-viewer.component.html
+++ b/src/app/course-viewer/course-viewer.component.html
@@ -1,3 +1,53 @@
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+  <a class="navbar-brand" href="#" style="color: #007bff; font-size: x-large">WhiteBoard</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo" aria-controls="navbarTogglerDemo" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/home">Home</a>
+      </li>
+      <li class="nav-item" [hidden] = !loggedIn>
+        <a class="nav-link" routerLink="/profile">Profile</a>
+      </li>
+      <li class="nav-item" [hidden] = !loggedIn>
+        <a class="nav-link" [hidden] = !admin
+           routerLink="/admin">Admin</a>
+      </li>
+    </ul>
+
+    <form [hidden]=!loggedIn
+          class="form-inline mt-2 mt-md-0">
+      <span class="navbar-text">
+      Logged in as : </span>
+      <span style="color: dimgrey; font-weight: bold">&nbsp;{{username}}
+      </span>
+      &nbsp;&nbsp;
+      <button class="btn btn-outline-primary my-2 my-sm-0"
+              (click)="logout()">Logout
+      </button>
+    </form>
+
+
+    <form [hidden]=loggedIn
+          class="form-inline mt-2 mt-md-0">
+
+      <button class="btn btn-outline-primary my-2 my-sm-0 mr-2"
+              routerLink="/login">&nbsp;Login&nbsp;
+      </button>
+
+      <button class="btn btn-outline-primary my-2 my-sm-0"
+              routerLink="/register">Register
+      </button>
+    </form>
+
+
+  </div>
+</nav>
+
+
 <div class="mr-1 ml-1 mt-0 p-3">
   <h2 style="color: #0069d9;">{{course.title}}</h2>
   <app-module-list></app-module-list>
