updated widget list preview and deployed on heroku

--- a/src/app/topic-pills/topic-pills.component.html
+++ b/src/app/topic-pills/topic-pills.component.html
@@ -8,6 +8,6 @@
     </a>
   </li>
 </ul>
-<div class="border border-dark rounded shadow-sm mt-2 mb-3 p-2 bg-light" >
+<div class="mt-2 mb-3 p-2" >
   <app-widget-list></app-widget-list>
 </div>
